# multi-agent-market-analysis

./: .env.example  .gitignore  architecture_design.md  dev_issues_log.md  interview_qa.md  pyproject.toml  test_run.py
src/: __init__.py  main.py
src/agents/: __init__.py  analysis.py  audit.py  draft.py  generate.py  search.py  state.py
src/api/: app.py  dependencies.py  models.py  store.py  tasks.py
src/api/routers/: reports.py
src/graph/: __init__.py  workflow.py
src/models/: __init__.py  contracts.py
src/tools/: __init__.py  search_api.py
src/ui/: app.py
src/utils/: __init__.py  config.py  json_parser.py  llm_retry.py  logger.py  report_saver.py
